--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
 <p>
     Not just socks, tie-dye bruh. <br> Poupa 10% comprando pelo site.
 </p>
-<img src="shirts/familiamed.JPG" alt="direita">
-<img src="shirts/meiasmedias.JPG" alt="direita">
-<img src="shirts/sacolamed.JPG" alt="direita">
+<img src="teste 1/shirts/familiamed.JPG" alt="direita">
+<img src="teste 1/shirts/meiasmedias.JPG" alt="direita">
+<img src="teste 1/shirts/sacolamed.JPG" alt="direita">
         </section>
        
         <p>
-            <a href="https://www.instagram.com/ashndtiedye/"><img src="Black-Instagram-Logo30px.png" alt="IG"></a> 
-            <a href="https://www.facebook.com/ashndtiedye/"><img src="facebook29px.png" alt="facebook"></a>
-             <a href="https://www.pinterest.com/ashndtiedye/"><img src="Pinterest40pxo.png" alt="Pinterest40pxo"></a>
+            <a href="https://www.instagram.com/ashndtiedye/"><img src="teste 1/Black-Instagram-Logo30px.png" alt="IG"></a> 
+            <a href="https://www.facebook.com/ashndtiedye/"><img src="teste 1/facebook29px.png" alt="facebook"></a>
+             <a href="https://www.pinterest.com/ashndtiedye/"><img src="teste 1/Pinterest40pxo.png" alt="Pinterest40pxo"></a>
         </p>
 <aside>
     <h3>Mais sobre nos</h3>
